--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,12 @@ version '1.0-SNAPSHOT'
 
 buildscript {
 
-    ext {
-        springBootVersion = '1.5.10.RELEASE'
-    }
-
     repositories {
         mavenCentral()
     }
+
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.2.RELEASE")
     }
 
 }
@@ -19,17 +16,15 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
 
 bootRun {
     systemProperties = System.properties
@@ -41,15 +36,8 @@ task runMain(type: JavaExec) {
     main = 'com.sundeepk.spring.basic.api.Application'
 }
 
-sourceSets {
-    test {
-        java {
-            srcDirs = ["src/test"]
-        }
-    }
-}
 
-task acceptanceTest(type: Exec, dependsOn: ["assemble"]) { thisTask ->
+task acceptanceTest(type: Exec, dependsOn: ["test"]) { thisTask ->
     group = "verification"
     description = "Runs the acceptance tests"
 
@@ -59,6 +47,13 @@ task acceptanceTest(type: Exec, dependsOn: ["assemble"]) { thisTask ->
     thisTask.mustRunAfter(test)
 }
 
+test {
+    useJUnitPlatform()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -67,6 +62,8 @@ dependencies {
 
     testCompile("com.jayway.jsonpath:json-path:2.2.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+    testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
+
 }
